--- a/themes/minimal/layouts/partials/css.html
+++ b/themes/minimal/layouts/partials/css.html
@@ -1,7 +1,6 @@
 <style>
 
     html body {
-        font-family: '{{ .Site.Params.font }}', sans-serif;
         background-color: {{ .Site.Params.backgroundColor | default "white" }};
     }
     :root {
@@ -25,13 +24,347 @@
     -moz-appearance: textfield;
     }
 
-    .calculator-input-text {
-        display: inline-block;
-    }
-    .calculator-validation-p {
+/* START PREBUILT CALCULATOR CSS */
+/* @extend display-flex; */
+display-flex, .form-row, .label-flex, .form-radio-group {
+  display: flex;
+  display: -webkit-flex; }
+
+
+input, textarea {
+  outline: none;
+  appearance: unset !important;
+  -moz-appearance: unset !important;
+  -webkit-appearance: unset !important;
+  -o-appearance: unset !important;
+  -ms-appearance: unset !important; }
+
+select{
+  outline: none;
+  appearance: menulist !important;
+  -moz-appearance: menulist !important;
+  -webkit-appearance: menulist !important;
+  -o-appearance: menulist !important;
+  -ms-appearance: menulist !important; 
+}
+input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
+  appearance: none !important;
+  -moz-appearance: none !important;
+  -webkit-appearance: none !important;
+  -o-appearance: none !important;
+  -ms-appearance: none !important;
+  margin: 0; }
+
+input:focus, select:focus, textarea:focus {
+  outline: none;
+  box-shadow: none !important;
+  -moz-box-shadow: none !important;
+  -webkit-box-shadow: none !important;
+  -o-box-shadow: none !important;
+  -ms-box-shadow: none !important; }
+
+input[type=checkbox] {
+  appearance: checkbox !important;
+  -moz-appearance: checkbox !important;
+  -webkit-appearance: checkbox !important;
+  -o-appearance: checkbox !important;
+  -ms-appearance: checkbox !important; }
+
+input[type=radio] {
+  appearance: radio !important;
+  -moz-appearance: radio !important;
+  -webkit-appearance: radio !important;
+  -o-appearance: radio !important;
+  -ms-appearance: radio !important; }
+
+input:-webkit-autofill {
+  box-shadow: 0 0 0 30px transparent inset;
+  -moz-box-shadow: 0 0 0 30px transparent inset;
+  -webkit-box-shadow: 0 0 0 30px transparent inset;
+  -o-box-shadow: 0 0 0 30px transparent inset;
+  -ms-box-shadow: 0 0 0 30px transparent inset;
+  background-color: transparent !important; }
+
+h4.form-header, h4.iso-form-header {
+    color: green;
+    text-decoration: underline;
+}
+
+img {
+  max-width: 100%;
+  height: auto; }
+
+figure {
+  margin: 0; }
+
+.clear {
+  clear: both; }
+
+.main {
+  position: relative; }
+
+.container {
+  width: 1400px;
+  margin: 0 auto;
+  background: #fff; }
+
+.form-row {
+  margin: 0 -30px; }
+  .form-row .form-group {
+    width: 50%;
+    padding: 0 30px; }
+
+.form-input, .form-select, .form-radio {
+  margin-bottom: 23px; }
+
+
+label, input {
+  display: block;
+  width: 100%; }
+
+label {
+  font-weight: bold;
+  margin-bottom: 7px; }
+
+label.required {
+  position: relative; }
+  label.required:after {
+    content: '*';
+    margin-left: 2px;
+    color: #b90000; }
+
+input {
+  box-sizing: border-box;
+  border: 1px solid #ebebeb;
+  padding: 14px 20px;
+  border-radius: 5px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -o-border-radius: 5px;
+  -ms-border-radius: 5px;
+  font-size: 14px;
+  font-family: 'Poppins'; }
+  input:focus {
+    border: 1px solid #329e5e; }
+
+.label-flex {
+  justify-content: space-between;
+  -moz-justify-content: space-between;
+  -webkit-justify-content: space-between;
+  -o-justify-content: space-between;
+  -ms-justify-content: space-between; }
+  .label-flex label {
+    width: auto; }
+
+.form-link {
+  font-size: 12px;
+  text-decoration: none;
+  position: relative; }
+
+
+.form-radio {
+  margin-bottom: 18px; }
+  .form-radio input {
+    width: auto;
+    display: inline-block; }
+
+.radio-label {
+  padding-right: 72px; }
+
+.form-radio-group {
+  padding-bottom: 10px;
+  padding-top: 12px; }
+
+.form-radio-item {
+  position: relative;
+  margin-right: 30px; }
+  .form-radio-item label {
+    font-weight: 500;
+    padding-left: 30px;
+    position: relative;
+    z-index: 9;
+    display: block;
+    cursor: pointer;
+    text-transform: none; }
+
+.check {
+  display: inline-block;
+  position: absolute;
+  border: 1px solid #ebebeb;
+  border-radius: 50%;
+  -moz-border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -o-border-radius: 50%;
+  -ms-border-radius: 50%;
+  height: 18px;
+  width: 18px;
+  top: 2px;
+  left: 0px;
+  z-index: 5;
+  transition: border .25s linear;
+  -webkit-transition: border .25s linear; }
+  .check:before {
+    position: absolute;
+    display: block;
+    content: '';
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -o-border-radius: 50%;
+    -ms-border-radius: 50%;
+    top: 3px;
+    left: 3px;
+    margin: auto;
+    transition: background 0.25s linear;
+    -webkit-transition: background 0.25s linear; }
+
+input[type=radio] {
+  position: absolute;
+  visibility: hidden; }
+  input[type=radio]:checked ~ .check {
+    border: 3px solid #329e5e; }
+
+
+.form-submit {
+  text-align: right; }
+
+.submit {
+  width: 150px;
+  height: 50px;
+  display: inline-block;
+  font-family: 'Poppins';
+  font-weight: bold;
+  font-size: 14px;
+  padding: 10px;
+  border: none;
+  cursor: pointer;
+  text-transform: uppercase;
+  border-radius: 5px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -o-border-radius: 5px;
+  -ms-border-radius: 5px; }
+
+#reset {
+  background: #fff;
+  color: #999;
+  border: 2px solid #ebebeb; }
+  #reset:hover {
+    border: 2px solid #329e5e;
+    background: #329e5e;
+    color: #fff; }
+
+#submit {
+  background: #329e5e;
+  color: #fff;
+  margin-right: 25px; }
+  #submit:hover {
+    background-color: #267747; }
+
+.form-input {
+  position: relative; }
+
+label.error {
+  display: block;
+  position: absolute;
+  top: 0px;
+  right: 0; }
+  label.error:after {
+    font-family: 'Material-Design-Iconic-Font';
+    position: absolute;
+    content: '\f1f8';
+    right: 20px;
+    top: 37px;
+    font-size: 23px;
+    color: #c70000; }
+
+input.error {
+  border: 1px solid #c70000; }
+
+select {
+    border: none;
+    width: 100%;
+}
+
+.select-list {
+  position: relative;
+  display: inline-block;
+  width: 100%;
+  margin-bottom: 47px;
+  box-sizing: border-box;
+  border: 1px solid #ebebeb;
+  padding: 14px 20px;
+  border-radius: 5px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -o-border-radius: 5px;
+  -ms-border-radius: 5px;
+  font-size: 14px; }
+
+.list-item {
+  position: absolute;
+  width: 100%;
+  z-index: 99; }
+
+@media screen and (max-width: 1024px) {
+  .container {
+    width: calc( 100% - 30px);
+    max-width: 100%;
+    margin: 0 auto; }
+
+  .calculator-form {
+    padding: 93px 80px 90px 80px; } }
+@media screen and (max-width: 992px) {
+
+  .form-radio-item {
+    margin-right: 15px; }
+
+  .calculator-form {
+    padding: 93px 30px 90px 30px; } }
+@media screen and (max-width: 768px) {
+  .form-row {
+    flex-direction: column;
+    -moz-flex-direction: column;
+    -webkit-flex-direction: column;
+    -o-flex-direction: column;
+    -ms-flex-direction: column;
+    margin: 0px; }
+
+  .form-row .form-group {
+    width: 100%;
+    padding: 0 0px; } }
+@media screen and (max-width: 480px) {
+  .submit {
+    width: 100%; }
+
+  #submit {
+    margin-bottom: 20px;
+    margin-right: 0px; }
+
+  .form-radio-group {
+    flex-direction: column;
+    -moz-flex-direction: column;
+    -webkit-flex-direction: column;
+    -o-flex-direction: column;
+    -ms-flex-direction: column; } }
+
+/*# sourceMappingURL=style.css.map */
+
+
+/* PREBUILT CALCULATOR CSS END */
+
+    .calculator_validation_p {
         display: inline;
         color: red;
     }
+
+    #calculator_submit {
+        background-color: green;
+        color: white;
+    }
+
     .calculator-tooltip {
     border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
     }
