--- a/themes/minimal/layouts/partials/css.html
+++ b/themes/minimal/layouts/partials/css.html
@@ -355,12 +355,12 @@ select {
 
 /* PREBUILT CALCULATOR CSS END */
 
-    .calculator_validation_p {
+    .calculator_validation_p, .calculator_validation_iso_forms_p {
         display: inline;
         color: red;
     }
 
-    #calculator_submit {
+    .calculator_submit {
         background-color: green;
         color: white;
     }
