googletags for calc submits

--- a/layouts/shortcodes/amt-calculator.html
+++ b/layouts/shortcodes/amt-calculator.html
@@ -178,7 +178,7 @@
       </div>
   </div>  
 
-  <input type="button" class="calculator_submit" onclick=check_required() value="Calculate my AMT!">
+  <input type="button" class="calculator_submit" id="amt_calculator_submit" onclick=check_required() value="Calculate my AMT!">
 </form>
 
 <h3> Results: </h3>
