--- a/layouts/shortcodes/iso-exercise-planner.html
+++ b/layouts/shortcodes/iso-exercise-planner.html
@@ -267,7 +267,7 @@
           </form>
       </div>
   </div>
-  <input type="button" class="calculator_submit" value="Calculate" onclick=check_required()>
+  <input type="button" class="calculator_submit" id="iso_planner_calculator_submit" value="Calculate" onclick=check_required()>
 </form>
 
 <h3> Results: </h3>
