kathleen's rude remarks

--- a/layouts/shortcodes/amt-calculator.html
+++ b/layouts/shortcodes/amt-calculator.html
@@ -601,6 +601,7 @@
 
     total_income = currency_formatter.format(total_income);
     agi = currency_formatter.format(agi);
+    magi = currency_formatter.format(magi);
     regular_deduction_final = currency_formatter.format(regular_deduction_final);
     taxable_income = currency_formatter.format(taxable_income);
     long_term_capital_gains_tax_owed = currency_formatter.format(long_term_capital_gains_tax_owed);
