--- a/layouts/shortcodes/iso-exercise-planner.html
+++ b/layouts/shortcodes/iso-exercise-planner.html
@@ -1,101 +1,3 @@
-<!--<form id="iso-exercise-planner-form">
-<h3> Step 1: Figure out your Regular Income Tax </h3>
-<label for="filing_status">Choose your Filing Status</label>
-<select name="filing_status" id="filing_status">
-  <option value="single">Single</option>
-  <option value="married_separately">Married, Filing Separately</option>
-  <option value="married">Married, Filing Together</option>
-</select> <br><br>
-<div class="calculator-input-text">Salary: 
-</div> <input type="number" placeholder="0" class="calculator-input required_field" onchange=check_min(this) id="salary" /> <p class="calculator-validation-p" id="salary-p"></p><br>
-
-<div class="calculator-input-text">Short Term Capital Gains: </div>
-<input type="number" placeholder="0" class="calculator-input" id="short-term-capital-gains"><br>
-
-<h4 id="total_income" class="result-header"> </h4>
-<div class="calculator-input-text">Traditional 401k Contributions: </div> 
-<input type="number" placeholder="0" class="calculator-input" onchange=check_min(this) id="trad-401k"><p class="calculator-validation-p" id="trad-401k-p"></p><br>
-
-<div class="calculator-input-text">HSA Contributions: </div>
-<input type="number" placeholder="0" class="calculator-input" onchange=check_min(this) id="hsa"><p class="calculator-validation-p" id="hsa-p"></p><br>
-<div class="calculator-input-text">Traditional IRA Contributions: </div>
-<input type="number" placeholder="0" class="calculator-input" onchange=check_min(this) id="trad-ira"><p class="calculator-validation-p" id="trad-ira-p"></p><br>
-
-<div class="calculator-input-text calculator-tooltip">
-  <span class="calculator-tooltip-text"><a href="/posts/what-is-sli" target="_blank">Learn about the SLI Deduction here</a></span>
-  Student Loan Interest Paid: 
-</div> <input type="number" placeholder="0" class="calculator-input" onchange=check_min(this) id="sli"><p class="calculator-validation-p" id="sli-p"></p><br>
-
-<h4 id="agi" class="result-header"> </h4>
-<div class="calculator-input-text calculator-tooltip">
-  <span class="calculator-tooltip-text"><a href="/posts/what-is-medical-expense" target="_blank">Learn about medical expenses here </a></span>
-  Medical Expenses: 
-</div> <input type="number" placeholder="0" class="calculator-input" onchange=check_min(this) id="medical-expenses"><p class="calculator-validation-p" id="medical-expenses-p"></p><br>
-<div class="calculator-input-text calculator-tooltip">
-  <span class="calculator-tooltip-text"><a href="/posts/what-is-salt" target="_blank">Read about the SALT here</a></span>
-  State and Local Tax (SALT): 
-</div> <input type="number" placeholder="0" class="calculator-input" onchange=check_min(this) id="salt"><p class="calculator-validation-p" id="salt-p"></p><br>
-<div class="calculator-input-text calculator-tooltip">
-  <span class="calculator-tooltip-text"><a href="/posts/what-is-mortgage-interest" target="_blank">Learn about your mortgage interest here</a></span>
-  Mortgage Interest Paid: 
-</div> <input type="number" placeholder="0" class="calculator-input" onchange=check_min(this) id="mortgage-interest"><p class="calculator-validation-p" id="mortgage-interest-p"></p><br>
-
-<h4 id="final_deduction" class="result-header"> </h4>
-<h4 id="taxable_income" class="result-header"> </h4>
-<h4 id="regular_income_tax" class="result-header"></h4>
-
-<h3> Step 2: Input Exercisable ISO Grants </h3>
-<br><label for="iso_forms_count" class="calculator-tooltip">  
-  <span class="calculator-tooltip-text">Please enter grants from oldest to newest. <br> If you have more than 3, enter the 3 oldest</span>
-  How many different ISO Grants could you potentially exercise from?</label>
-<select name="iso_forms_count" id="iso_forms_count">
-  <option value="iso_forms_count_one">1</option>
-  <option value="iso_forms_count_two">2</option>
-  <option value="iso_forms_count_three">3</option>
-</select> 
-<div id="iso-form-container-for-all">
-  <br><div class="calculator-input-text calculator-tooltip">
-    <span class="calculator-tooltip-text">Enter the current FMV or your best estimate for when you plan to exercise </span>
-    Fair Market Value: </div>
-    <input type="number" placeholder="0.00" class="calculator-input required_field" onchange=check_min(this) id="fmv" ><p class="calculator-validation-p" id="fmv-p"></p><br>
-  
-    <div class ="iso-form-containers" id="iso-form-container-1">
-    <br>
-    <h5 class="iso-form-labels" id="iso-form-label-1"> Input the details of grant #1 below </h5>
-    <div class="calculator-input-text">Exercisable Shares: </div>
-    <input type="number" placeholder="0" class="calculator-input required_field" onchange=check_min(this) id="shares-exercisable-1" ><p class="calculator-validation-p calculator-validation-iso-forms-p" id="shares-exercisable-1-p"></p><br>
-    <div class="calculator-input-text">Strike Price: </div>
-    <input type="number" placeholder="0.00" class="calculator-input required_field" onchange=check_min(this) id="strike-price-1" ><p class="calculator-validation-p calculator-validation-iso-forms-p" id="strike-price-1-p"></p><br>
-    </div>
-
-  <div class ="iso-form-containers" id="iso-form-container-2">
-    <br>
-    <h5 class="iso-form-labels" id="iso-form-label-2"> Input the details of grant #2 below </h5>
-    <div class="calculator-input-text">Exercisable Shares: </div>
-    <input type="number" placeholder="0" class="calculator-input" onchange=check_min(this) id="shares-exercisable-2" ><p class="calculator-validation-p calculator-validation-iso-forms-p" id="shares-exercisable-2-p"></p><br>
-    <div class="calculator-input-text">Strike Price: </div>
-    <input type="number" placeholder="0.00" class="calculator-input" onchange=check_min(this) id="strike-price-2" ><p class="calculator-validation-p calculator-validation-iso-forms-p" id="strike-price-2-p"></p><br>
-  </div>
-  
-  <div class ="iso-form-containers" id="iso-form-container-3">
-    <br>
-    <h5 class="iso-form-labels" id="iso-form-label-3"> Input the details of grant #3 below </h5>
-    <div class="calculator-input-text">Exercisable Shares: </div>
-    <input type="number" placeholder="0" class="calculator-input" onchange=check_min(this) id="shares-exercisable-3" ><p class="calculator-validation-p calculator-validation-iso-forms-p" id="shares-exercisable-3-p"></p><br>
-    <div class="calculator-input-text">Strike Price: </div>
-    <input type="number" placeholder="0.00" class="calculator-input" onchange=check_min(this) id="strike-price-3" ><p class="calculator-validation-p calculator-validation-iso-forms-p" id="strike-price-3-p"></p><br>
-  </div>
-</div>
-
-<br><input type="button" value="Calculate" onclick=check_required()>
-</form>
-<h3> Results: </h3>
-<h4 id="iso_spread_allowed" class="result-header"> </h4>
-<h4 id="result_validation_message" class="result-header"> </h4>
-<h4 id="placeholder" class="result-header"> </h4>-->
-
-
-<!---------------------- New code ------------------->
 <form>  
   <div class="main">
       <div class="container">
@@ -270,14 +172,14 @@
   <input type="button" class="calculator_submit" id="iso_planner_calculator_submit" value="Calculate" onclick=check_required()>
 </form>
 
-<h3> Results: </h3>
-<h4 id="iso_spread_allowed" class="result_header"> </h4>
+<br>
 <h4 id="result_validation_message" class="result_header"> </h4>
-<h4 id="total_income" class="result_header"></h4>
+<br>
+<!--<h4 id="total_income" class="result_header"></h4>
 <h4 id="agi" class="result_header"> </h4>
 <h4 id="final_deduction" class="result_header"> </h4>
 <h4 id="taxable_income" class="result_header"> </h4>
-<h4 id="regular_income_tax_owed" class="result_header"> </h4>
+<h4 id="regular_income_tax_owed" class="result_header"> </h4>-->
 
 <table class="hidden table table-bordered table-striped" id="iso_planner_result_table">
   <tr id="iso_planner_result_header">
@@ -310,6 +212,11 @@
     <td id="iso_planner_result_shares_exercise_total"></td>
     <td id="iso_planner_result_cost_total"></td>
   </tr>
+  <!--<tfoot>
+    <tr>
+      <td colspan="5" id="iso_planner_results_td">Results:</td>
+    </tr>
+  </tfoot>-->
 </table>
 
 <script>
@@ -421,73 +328,79 @@
     var filing_status = filing_status_obj.options[filing_status_obj.selectedIndex].value;
     
     if (filing_status == 'single') {
-      var amt_deduction=72900;
-      var amt_phase = 518400;
-      var amt_tax_brackets = 197900;
-      var standard_deduction=12400;
+      var amt_deduction=73600;
+      var amt_phase = 523600;
+      var amt_tax_brackets = 199900;
+      var standard_deduction=12550;
       var sli_phase = 70000;
-      var sli_max = 85000;
-      var sli_divider = 15000;
+      var sli_magi_max = 85000;
+      // Basically for every dollar your MAGI is over the sli_phase, it reduces your deduction by some %
+      var sli_divider = sli_magi_max - sli_phase;
+      var sli_max = 2500;
       //LOOK INTO WHETHER SINGLE PEOPLE CAN HAVE A FAMILY HSA;     
       var trad_401k_limit = 19500;
-      var hsa_limit = 3550;
+      var hsa_limit = 3600;
       var trad_ira_limit = 6000;
       var salt_deduction_limit = 10000;
-      var reg_income_tax_bracket = [0,9875,40125,85525,163300,207350,518400];
+      var reg_income_tax_bracket = [0,9950,40525,86375,164925,209425,523600];
       var reg_income_tax_rate = [0.1,0.12,0.22,0.24,0.32,0.35,0.37];
-      var long_term_capital_gain_tax_bracket = [0,40000,441450];
+      var long_term_capital_gain_tax_bracket = [0,40400,445850];
       var long_term_capital_gains_tax_owed_rate = [0,0.15,0.2];
       var additional_medicare_tax_threshold = 200000;
       var regular_medicare_tax_rate = 0.0145;
       var additional_medicare_tax_rate = 0.009;
-      var ssi_income_limit = 137700;
+      var ssi_income_limit = 142800;
       var ssi_tax_rate = 0.062
 
     } else if (filing_status == 'married_separately') {
-      var amt_deduction=56700;
-      var amt_phase = 518400;
-      var amt_tax_brackets = 98950;
-      var standard_deduction=12400;
+      var amt_deduction=57300;
+      var amt_phase = 523600;
+      var amt_tax_brackets = 99500;
+      var standard_deduction=12550;
+      // married filing separately cannot claim sli. go figure, see IRS website
       var sli_phase = 0;
+      var sli_magi_max = 0;
+      var sli_divider = sli_magi_max - sli_phase;
       var sli_max = 0;
-      var sli_divider = 0;
       var trad_401k_limit = 19500;
-      var hsa_limit = 7100;
+      var hsa_limit = 7200;
       var trad_ira_limit = 6000;
       var salt_deduction_limit = 5000;
-      var reg_income_tax_bracket = [0,9875,40125,85525,163300,207350,311025];
+      var reg_income_tax_bracket = [0,9950,40525,86375,164925,209425,523600];
       var reg_income_tax_rate = [0.1,0.12,0.22,0.24,0.32,0.35,0.37];
-      var long_term_capital_gain_tax_bracket = [0,40000,441450];
+      var long_term_capital_gain_tax_bracket = [0,40400,250800];
       var long_term_capital_gains_tax_owed_rate = [0,0.15,0.2];
       var additional_medicare_tax_threshold = 125000;
       var regular_medicare_tax_rate = 0.0145;
       var additional_medicare_tax_rate = 0.009;
-      var ssi_income_limit = 137700;
+      var ssi_income_limit = 142800;
       var ssi_tax_rate = 0.062
 
     } else if (filing_status == 'married') {
-      var amt_deduction=113400;
-      var amt_phase = 1036800;
-      var amt_tax_brackets = 197900;
-      var standard_deduction=24800;
+      var amt_deduction=114600;
+      var amt_phase = 1047200;
+      var amt_tax_brackets = 199900;
+      var standard_deduction=25100;
       var sli_phase = 140000;
-      var sli_max = 170000;
-      var sli_divider = 30000;
+      var sli_magi_max = 170000;
+      // Basically for every dollar your MAGI is over the sli_phase, it reduces your deduction by some %
+      var sli_divider = sli_magi_max - sli_phase;
+      // sli max is 2500 per tax return (so married only cap at 2500 per thestreet.com)
+      var sli_max = 2500;
       var trad_401k_limit = 39000;
-      var hsa_limit = 7100;
+      var hsa_limit = 7200;
       var trad_ira_limit = 12000;
       var salt_deduction_limit = 10000;
-      var reg_income_tax_bracket = [0,19750,80250,171050,326600,414700,622050];
+      var reg_income_tax_bracket = [0,19900,81050,172750,329850,418850,628300];
       var reg_income_tax_rate = [0.1,0.12,0.22,0.24,0.32,0.35,0.37];
-      var long_term_capital_gain_tax_bracket = [0,40000,441450];
+      var long_term_capital_gain_tax_bracket = [0,80800,501600];
       var long_term_capital_gains_tax_owed_rate = [0,0.15,0.2];
       var additional_medicare_tax_threshold = 250000;
       var regular_medicare_tax_rate = 0.0145;
       var additional_medicare_tax_rate = 0.009;
       // LOOK INTO IF SSI LIMIT IS DOUBLE FORMARRIED. I COULDNT FINDANYWHERE
-      var ssi_income_limit = 275400;
+      var ssi_income_limit = 285600;
       var ssi_tax_rate = 0.062
-
     }
     
     function empty_to_zero(num) {
@@ -557,11 +470,23 @@
       document.getElementById('trad_ira_p').innerHTML = "The IRA limit for your filing status is: " + trad_ira_limit;
     }
     
+    var total_exemptions = parseFloat(trad_401k) + parseFloat(trad_ira) + parseFloat(hsa);
+
     // MAGI: AGI but includes Trad IRA, SLI
     var magi = total_income - parseFloat(trad_401k) - parseFloat(hsa);
 
+    // Married, Filing Separately cannot take the Student Loan Interest Deduction. Go Figure
+    if (filing_status == 'married_separately') {
+      document.getElementById("sli").value = 0;
+      document.getElementById('sli_p').innerHTML = "You cannot take the student loan interest deduction as 'Married, Filing Separately'";
+    }
+    if (parseFloat(sli) > sli_max && filing_status != 'married_separately') {
+      document.getElementById("sli").value = sli_max;
+      document.getElementById('sli_p').innerHTML = "The SLI limit for your filing status is " + sli_max;
+    }
+
     // Calculate SLI - based on MAGI
-    if (magi > sli_max) {
+    if (magi > sli_magi_max) {
       sli = 0;
     } else if (magi > sli_phase) {
       var sli_multiplier = (magi - sli_phase) / sli_divider;
@@ -626,12 +551,12 @@
       }) - 1;
     }
     
-    var regular_income_tax_owed = 0;
+    var federal_income_tax_owed = 0;
     for (var i = taxable_income_index; i >= 0; i--) {
         if (i == taxable_income_index) {
-            regular_income_tax_owed += reg_income_tax_rate[i] * (taxable_income - reg_income_tax_bracket[i]);
+            federal_income_tax_owed += reg_income_tax_rate[i] * (taxable_income - reg_income_tax_bracket[i]);
         } else {
-            regular_income_tax_owed += reg_income_tax_rate[i] * (reg_income_tax_bracket[i+1] - reg_income_tax_bracket[i]);
+            federal_income_tax_owed += reg_income_tax_rate[i] * (reg_income_tax_bracket[i+1] - reg_income_tax_bracket[i]);
         }
     }
 
@@ -674,7 +599,8 @@
     }
     
     // Calculate Total Regular Income Tax (Federal Income Tax, Medicare, SSI, Long Term)
-    regular_income_tax_owed = regular_income_tax_owed + medicare_tax_owed + ssi_tax_owed + long_term_capital_gains_tax_owed;
+    var regular_income_tax_owed = 0;
+    regular_income_tax_owed = federal_income_tax_owed + medicare_tax_owed + ssi_tax_owed + long_term_capital_gains_tax_owed;
 
     // Calculate ISO Spread Per Share, per potential grant
     var fmv_parsed = parseFloat(fmv);
@@ -865,11 +791,11 @@
     regular_deduction_final = currency_formatter.format(regular_deduction_final);
     taxable_income = currency_formatter.format(taxable_income);
 
-    document.getElementById("total_income").innerHTML="Your Total Income is " + total_income;
+    /*document.getElementById("total_income").innerHTML="Your Total Income is " + total_income;
     document.getElementById("agi").innerHTML="Your Adjusted Gross Income (AGI) is " + agi;
     document.getElementById("final_deduction").innerHTML="You took the " + deduction_category + " and your deduction is " + regular_deduction_final;
     document.getElementById("taxable_income").innerHTML="Your Taxable Income is " + taxable_income;
-    document.getElementById("regular_income_tax_owed").innerHTML= "Your Regular Income Tax Owed is: " + regular_income_tax_owed;
+    document.getElementById("regular_income_tax_owed").innerHTML= "Your Regular Income Tax Owed is: " + regular_income_tax_owed;*/
     document.getElementById("result_validation_message").innerHTML= result_validation_message;
 
   }
