--- a/themes/minimal/layouts/partials/css.html
+++ b/themes/minimal/layouts/partials/css.html
@@ -134,7 +134,6 @@ figure {
 .form-input, .form-select, .form-radio {
   margin-bottom: 23px; }
 
-
 label, input {
   display: block;
   width: 100%; }
@@ -309,7 +308,7 @@ select {
   position: relative;
   display: inline-block;
   width: 100%;
-  margin-bottom: 47px;
+  margin-bottom: 20px;
   box-sizing: border-box;
   border: 1px solid #ebebeb;
   padding: 14px 20px;
@@ -398,7 +397,6 @@ select {
     -ms-flex-direction: column; 
     } 
 }
-/*# sourceMappingURL=style.css.map */
 
 
 /* PREBUILT CALCULATOR CSS END */
@@ -413,40 +411,44 @@ select {
         color: white;
     }
 
-    .calculator-tooltip {
-    border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
-    }
-
-    /*Tooltip text */
-    .calculator-tooltip .calculator-tooltip-text {
-    visibility: hidden;
-    background-color: black;
-    color: white;
-    text-align: center;
-    margin: -30px;
-    padding: 5px 5px;
-    border-radius: 6px;
-    position: absolute;
-    z-index: 1;
-    } 
-
-
-    /* change default link color of tooltip to white */
-    .calculator-tooltip .calculator-tooltip-text a{
-    color: white;
-    }
-
-
-    /* Show the tooltip text when you mouse over the tooltip container */
-    .calculator-tooltip:hover .calculator-tooltip-text {
-    visibility: visible;
-    }
-
     /* ISO Exercise Result Table Header */
     #iso-planner-result-header {
         background-color: var(--accent);
         color: white;
     }
+
+    table {
+        width:75%;
+        table-layout: auto;
+    }
+    th{
+        white-space:nowrap !important;
+        overflow-wrap: break-word;
+    }
+    td{
+        white-space:nowrap !important;
+        overflow-wrap: break-word;
+    }
+    tfoot{
+        white-space:nowrap !important;
+        overflow-wrap: break-word !important;
+        font-weight: bold;
+        color: var(--accent);
+    }
+
+    /* I GIVE UP ON TOOLTIPS
+    .tooltip_label {
+      border-bottom:1px dotted #666
+    }
+    .tooltip_label .tooltip{
+        position:absolute;
+      display:inline-block;
+      border: 1px solid red;
+    }
+    .tooltip_label:hover .tooltip{
+      color:red;
+    }*/
+
 </style>
 
 <!-- main -->
