--- a/themes/minimal/layouts/partials/css.html
+++ b/themes/minimal/layouts/partials/css.html
@@ -417,7 +417,7 @@ select {
         color: white;
     }
 
-    table {
+    /*table {
         width:75%;
         table-layout: auto;
     }
@@ -434,8 +434,54 @@ select {
         overflow-wrap: break-word !important;
         font-weight: bold;
         color: var(--accent);
+    }*/
+
+    #tax_confirmation_phrase {
+        font-weight: bold;
+        color: var(--accent);
+    }
+    table tr.table_divider {
+        border-bottom: solid grey;
+        border-bottom-width: 2px;
     }
 
+    .collapsible {
+      background-color: #eee;
+      color: #444;
+      cursor: pointer;
+      padding: 18px;
+      width: 100%;
+      border: none;
+      text-align: left;
+      outline: none;
+      font-size: 15px;
+      font-weight: bold;
+    }
+
+    .active, .collapsible:hover {
+      background-color: #ccc;
+    }
+    #overall_tax_results_table{
+      padding: 0 18px;
+      overflow: hidden;
+    }
+    #regular_income_tax_results_table, #amt_tax_results_table {
+      padding: 0 18px;
+      display: none;
+      overflow: hidden;
+    }
+
+    .collapsible:after {
+      content: '\02795'; /* Unicode character for "plus" sign (+) */
+      font-size: 13px;
+      color: white;
+      float: right;
+      margin-left: 5px;
+    }
+
+    .active:after {
+      content: "\2796"; /* Unicode character for "minus" sign (-) */
+    }
     /* I GIVE UP ON TOOLTIPS
     .tooltip_label {
       border-bottom:1px dotted #666
